one modal, to rule them all

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,15 +4,21 @@ en:
     need_to_sign_in: "Need to sign in"
     user_updated: "User '%{user}' was updated."
     user_created: "User '%{user}' was created."
+    task_updated: "Task '%{task}' was updated."
+    task_created: "Task '%{task}' was created."
 
   views:
+    editing_task: "Editing %{task}"
+    new_task: "New Task"
     pin: "PIN"
     parent: "Parent"
     child: "Child"
     edit: "Edit"
+    save: "Save"
+    cancel: "Cancel"
     delete: "Delete"
     member: "Member"
-    family_link: "Family Link"
+    link: "Link"
     blank_family: "%{family} Family"
     editing_family: "Editing %{family}"
     create_join_family: "Create / Join Family"
