--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,9 +6,11 @@ en:
     user_created: "User '%{user}' was created."
     task_updated: "Task '%{task}' was updated."
     task_created: "Task '%{task}' was created."
+    meal_updated: "Meal '%{meal}' was updated."
+    meal_created: "Meal '%{meal}' was created."
 
   views:
-    editing_task: "Editing %{task}"
+    editing_task: "Editing '%{task}'"
     new_task: "New Task"
     pin: "PIN"
     parent: "Parent"
@@ -18,12 +20,13 @@ en:
     cancel: "Cancel"
     delete: "Delete"
     member: "Member"
+    members: "Members"
     link: "Link"
     blank_family: "%{family} Family"
     editing_family: "Editing %{family}"
     create_join_family: "Create / Join Family"
     family_id: "Existing Family ID"
-    editing_user: "Editing %{user}"
+    editing_user: "Editing '%{user}'"
     create_account: "Create Account"
     add_family_member: "Add Family Member"
     name: "Name"
@@ -56,3 +59,9 @@ en:
     posts: "posts"
     followers: "followers"
     following: "following"
+    activity: "Activity"
+    activity_completion: "%{who} has completed '%{what}'"
+    activity_assign_meal: "%{who} was added to the menu for %{what}"
+    new_meal: "New Meal"
+    editing_meal: "Editing '%{meal}'"
+    recipe_box: "Recipe Box"
