improvements to layout

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,6 +44,7 @@ en:
     social_media: "Social Media"
     tasks: "Tasks"
     family_tasks: "Family Tasks"
+    member_tasks: "Tasks for %{member}"
     no_tasks: "(no tasks assigned)"
     task: "Task"
     event: "Event"
@@ -62,6 +63,7 @@ en:
     activity: "Activity"
     activity_completion: "%{who} has completed '%{what}'"
     activity_assign_meal: "%{who} was added to the menu for %{what}"
+    activity_remove_meal: "%{who} was removed from the menu"
     new_meal: "New Meal"
     editing_meal: "Editing '%{meal}'"
     recipe_box: "Recipe Box"
