--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,7 +77,9 @@ en:
     other_family_tasks: "Other Family Tasks"
     todays_tasks: "Todays Tasks"
     allowance: "Allowance"
-
+    weekly_allowance: "Weekly Allowance"
+    family_access_link: "Family Portal"
+    tip_family_link: "The 'Family Portal' is a custom login page for children."    
   number:
     currency:
       format:
