relationships for instagram

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -9,6 +9,8 @@ en:
   members: Members
   portal: Portal
   no_social_media: No social media
+  following: Following
+  followers: Followers
 
   controllers:
     not_authorized: "Not authorized"
