social media stats

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,17 @@ en:
   followers: Followers
   disabled: Disabled
   enabled: Enabled
+  posts: Posts
+
+  days:
+    -
+    - Monday
+    - Tuesday
+    - Wednesday
+    - Thursday
+    - Friday
+    - Saturday
+    - Sunday
 
   controllers:
     not_authorized: "Not authorized"
