--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -108,3 +108,38 @@ en:
     - Friday
     - Saturday
     - Sunday
+  time_ago:
+    half_a_minute: "30s"
+    less_than_x_seconds:
+      one:   "1s"
+      other: "%{count}s"
+    x_seconds:
+      one:   "1s"
+      other: "%{count}s"
+    less_than_x_minutes:
+      one:   "1m"
+      other: "%{count}m"
+    x_minutes:
+      one:   "1m"
+      other: "%{count}m"
+    about_x_hours:
+      one:   "1h"
+      other: "%{count}h"
+    x_days:
+      one:   "1d"
+      other: "%{count}d"
+    about_x_months:
+      one:   "1m"
+      other: "%{count}m"
+    x_months:
+      one:   "1m"
+      other: "%{count}m"
+    about_x_years:
+      one:   "1y"
+      other: "%{count}y"
+    over_x_years:
+      one:   "1y"
+      other: "%{count}y"
+    almost_x_years:
+      one:   "1y"
+      other: "%{count}y"
