--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,6 +30,8 @@ en:
   email: "Email"
   enable: Enable
   enabled: Enabled
+  enable_disable_social: Enable / Disable Social Media
+  enable_disable_social_info: Please make sure that you are logged out of the social media feed you are adding. You will be redirected and asked to enter in credentials for the account you are adding.
   event_created: "Event '%{event}' was created."
   event_updated: "Event '%{event}' was updated."
   event: "Event"
@@ -46,6 +48,7 @@ en:
   home: "Home"
   info: "Info"
   likes: Likes
+  liked: Liked
   link: "Link"
   load_more: Load More
   meal_created: "Meal '%{meal}' was created."
@@ -71,6 +74,7 @@ en:
   pays: "Pays"
   pin_doesnt_match: PIN invalid
   pin: "PIN"
+  pin_info: The PIN is used to log into the family portal.
   portal: Portal
   posts: Posts
   profile: "Profile"
