--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,8 @@ en:
   family_access_link: "Family Portal"
   family_created: Family created
   family_id: "Existing Family ID"
+  family_name_info: Enter name to create a new family.
+  family_id_info: Enter an existing Family ID to join another family.
   family_tasks: "Family Tasks"
   family_updated: Family updated
   family: "Family"
@@ -74,7 +76,7 @@ en:
   pays: "Pays"
   pin_doesnt_match: PIN invalid
   pin: "PIN"
-  pin_info: The PIN is used to log into the family portal.
+  pin_info: The PIN is used to sign in to the family portal.
   portal: Portal
   posts: Posts
   profile: "Profile"
@@ -147,3 +149,9 @@ en:
     almost_x_years:
       one:   "1y"
       other: "%{count}y"
+  activerecord:
+    models:
+      family: Family
+    attributes:
+      family:
+        url: "Family ID"
