--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,6 @@
 en:
-  about_us: Helping families promote good digital citizenship and social media awareness
+  tag_line: Helping families promote good digital citizenship and social media awareness
+  about_us: About Us
   account_disabled: Account Disabled
   activity_assign_meal: "%{who} was added to the menu for %{what}"
   activity_completion: "%{who} has completed '%{what}'"
@@ -54,7 +55,14 @@ en:
   family: "Family"
   followers: Followers
   following: Following
+  goals: Site Goals
   home: "Home"
+  home_blurb_1: "Monitor posts and relationships of family members on the most popular social media sites without needing your own account."
+  home_blurb_2: "Aggregated social media timeline showing a week of posting activity."
+  home_blurb_3: "View individual social media feeds and posts showing comments."
+  home_blurb_4_1: "Provide a way for parents to be aware of their childrens social media activity without beign too intrusive."
+  home_blurb_4_2: "Encourage family discussion about what is appropriate to post."
+  home_blurb_4_3: "Help parents be aware of how much time is spent on social media activity during the day and encourage good time management."
   info: "Info"
   likes: Likes
   liked: Liked
@@ -67,6 +75,7 @@ en:
   member: Member
   members: Members
   menu: Menu
+  more_being_added: More being added.
   name: Name
   need_to_sign_in: "Need to sign in"
   new_meal: "New Meal"
