--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,5 @@
 en:
-  tag_line: Helping families promote good digital citizenship and social media awareness
+  tag_line: Helping families promote good digital citizenship, social media awareness, and time management.
   about_us: About Us
   account_disabled: Account Disabled
   activate: Activate
@@ -63,7 +63,7 @@ en:
   home: "Home"
   home_blurb_1: "Monitor posts and relationships of family members on the most popular social media sites without needing your own account."
   home_blurb_2: "Aggregated social media timeline showing a week of posting activity."
-  home_blurb_3: "View individual social media feeds and posts showing comments."
+  home_blurb_3: "View individual social media feeds and posts with comments."
   home_blurb_4_1: "Provide a way for parents to be aware of their childrens social media activity without beign too intrusive."
   home_blurb_4_2: "Encourage family discussion about what is appropriate to post."
   home_blurb_4_3: "Help parents be aware of how much time is spent on social media activity during the day and encourage good time management."
