parents can select who completed task

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,7 @@ en:
   user_updated: User updated
   weekly_allowance: "Weekly Allowance"
   who: Who
+  who_completed: "Who completed?"
   what: What
   when: When
 
